file upload modified

--- a/app/server/views/upload.ejs
+++ b/app/server/views/upload.ejs
@@ -80,7 +80,7 @@
                 </div>
                 <button class="btn btn-lg upload-btn" type="button">Upload File</button>
             </div>
-            <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
+            <input id="upload-input" type="file" name="uploadFile" multiple="multiple"></br>
         </div>
 
         </div>
